Fixed some new layout issues

--- a/N1-Taiga/styles/controls.less
+++ b/N1-Taiga/styles/controls.less
@@ -1,5 +1,9 @@
 @import "variables";
 
+.header-container {
+  margin-right: 10px;
+}
+
 /**
  * Buttons
  */
