--- a/N1-Taiga/styles/threads.less
+++ b/N1-Taiga/styles/threads.less
@@ -1,5 +1,10 @@
 @import "variables";
 
+.list-tabular .list-column.list-column-Item {
+  margin-left: -20px;
+  padding-left: 30px;
+}
+
 .thread-list {
   .list-container {
     .list-item {
